--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,37 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Circular', Helvetica, Arial, sans-serif;
+  background-color: #121212;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #535353;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777777;
+}
+
+::-webkit-scrollbar-track {
+  background: #121212;
+  border-left: 1px solid #1d1d1d;
+}
+
 .App {
   text-align: center;
 }
